--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,12 @@
-<h1>
-  {{title}}
-</h1>
+
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <h2>Posts</h2>
+      <ul class="list-group">
+        <app-post-list *ngFor="let post of posts" [title]="post.title" [content]="post.content" [loveIts]="post.loveIts" [created_at]="post.created_at"></app-post-list>
+        
+      </ul>
+    </div>
+  </div>
+</div>
