--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,7 @@
     <div class="col-xs-12">
       <h2>Posts</h2>
       <ul class="list-group">
-        <app-post-list *ngFor="let post of posts" [title]="post.title" [content]="post.content" [loveIts]="post.loveIts" [created_at]="post.created_at"></app-post-list>
-        
+          <app-post-list [posts]="posts" ></app-post-list>        
       </ul>
     </div>
   </div>
