--- a/src/app/post-list-item/post-list-item.component.html
+++ b/src/app/post-list-item/post-list-item.component.html
@@ -11,5 +11,9 @@
     <button class="btn btn-danger close-button" (click)="dontLoveIt()" type="button">
       Don't Love It!
     </button>
+
+    <button style="margin-left: 200mm" class="btn btn-danger close-button" (click)="SupprimerPost([index])" type="button">
+       Supprimer Post
+      </button>
   </div>
 </li>
