--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,18 @@
-
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12">
-      <h2>Posts</h2>
-      <ul class="list-group">
-          <app-post-list [posts]="posts" ></app-post-list>        
-      </ul>
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li routerLinkActive="active"><a routerLink="posts">Posts</a></li>
+          <li routerLinkActive="active"><a routerLink="new">Nouveau Post</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <router-outlet></router-outlet>
+      </div>
     </div>
   </div>
-</div>
+
